Elimina referencias VYP (1)

--- a/PLANTILLA/PLANTILLA/Views/Empleo/ManageEmpleo.cshtml
+++ b/PLANTILLA/PLANTILLA/Views/Empleo/ManageEmpleo.cshtml
@@ -200,7 +200,7 @@
                             /*Creamos mensaje para PostOferta*/
                             var fecha = item.FechaString;
                             fecha = System.Net.WebUtility.UrlEncode(fecha);
-                            var myurl = "https://vigilanciayproteccion.website/Empleo/Oferta?provincia=" + item.Provincia + "&fecha=" + fecha;
+                            var myurl = "https://../Empleo/Oferta?provincia=" + item.Provincia + "&fecha=" + fecha;
                             string mensaje = myurl + "\n " + item.Titulo;
 
 
