--- a/PLANTILLA/PLANTILLA/Views/Home/Index.cshtml
+++ b/PLANTILLA/PLANTILLA/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
             C/Rincon de la Victoria 10
             28018 Madrid
 
-            E-Mail de Contacto fjcg.vigilanciayproteccion@gmail.com
+            E-Mail de Contacto ..
         </p>
     </div>
 </div>
