--- a/PLANTILLA/PLANTILLA/Views/Shared/Components/VC_Footer/Default.cshtml
+++ b/PLANTILLA/PLANTILLA/Views/Shared/Components/VC_Footer/Default.cshtml
@@ -31,7 +31,7 @@
                 <div class="widget no-box">
                     <h5 class="widget-title">Socio<span></span></h5>
                     <p></p>
-                    <a class="btn btn_footer" href="https://vigilanciayproteccion.es" target="_blank">Accede a nuestro blog</a>
+                    <a class="btn btn_footer" href="https://../" target="_blank">Accede a nuestro blog</a>
                 </div>
             </div>
 
@@ -39,12 +39,12 @@
 
                 <div class="widget no-box">
                     <h5 class="widget-title">Contáctanos<span></span></h5>
-                    <p><a href="mailto:raul.castrodlt@outlook.es">Raúl Castro de la Torre</a></p>
-                    <p><a href="mailto:danielpokejeron@gmail.com">Daniel Castro de la Torre</a></p>
-                    <p><a href="mailto:fjcg.vigilanciayproteccion@gmail.com">Francisco Javier Castro García</a></p>
+                    <p><a href="">Raúl Castro de la Torre</a></p>
+                    <p><a href="">Daniel Castro de la Torre</a></p>
+                    <p><a href="">Francisco Javier Castro García</a></p>
                     <ul class="social-footer2">
                         <li class=""><a target="_blank" href="https://t.me/joinchat/KYR7oGnd98ZiMDJk"><img width="30" height="30" src="~/assets/webfonts/icons8-aplicación-telegrama.svg"></a></li>
-                        <li class=""><a target="_blank" href="https://www.facebook.com/WWW.VIGILANCIAYPROTECCION.ES/"><img width="30" height="30" src="~/assets/webfonts/icons8-facebook-nuevo.svg"></a></li>
+                        <li class=""><a target="_blank" href="https://www.facebook.com/WWW....ES/"><img width="30" height="30" src="~/assets/webfonts/icons8-facebook-nuevo.svg"></a></li>
                         <li class=""><a target="_blank" href="https://www.linkedin.com/company/74678106/admin//"><img width="30" height="30" src="~/assets/webfonts/icons8-linkedin-rodeado-de-círculo.svg"></a></li>
                         <li class=""><a target="_blank" href="https://twitter.com/VigilanciayP"><img width="30" height="30" src="~/assets/webfonts/icons8-twitter-circled.svg"></a></li>
                     </ul>
@@ -59,7 +59,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <p>Copyright vigilanciayproteccionportal © 2021. Todos los derechos reservados.</p>
+                <p>Copyright ..portal © 2021. Todos los derechos reservados.</p>
             </div>
         </div>
     </div>
