--- a/PLANTILLA/PLANTILLA/Views/Shared/Components/VC_NavBar/Default.cshtml
+++ b/PLANTILLA/PLANTILLA/Views/Shared/Components/VC_NavBar/Default.cshtml
@@ -37,7 +37,7 @@
                            class="dropdown-item" tooltip="Facebook"><i class="fab fa-facebook-f"></i>&nbsp;&nbsp;FACEBOOK</a>
                         <a href="https://twitter.com/intent/tweet?url=@(ViewBag.Url)" target="_blank"
                            class="dropdown-item" tooltip="Twitter"><i class="fab fa-twitter"></i>&nbsp;&nbsp;TWITTER</a>
-                        <a href="https://www.linkedin.com/shareArticle?mini=true&url=@(ViewBag.Url)&source=https://vigilanciayproteccion.website"
+                        <a href="https://www.linkedin.com/shareArticle?mini=true&url=@(ViewBag.Url)&source=https://../"
                            target="_blank" class="dropdown-item" tooltip="LinkedIn"><i class="fab fa-linkedin"></i>&nbsp;&nbsp;LINKEDIN</a>
                         <a href="https://t.me/share/url?url=@(ViewBag.Url)"
                            class="dropdown-item"
