--- a/PLANTILLA/PLANTILLA/wwwroot/css/PanelAdmin/Empleo.ManageEmpleo.css
+++ b/PLANTILLA/PLANTILLA/wwwroot/css/PanelAdmin/Empleo.ManageEmpleo.css
@@ -236,7 +236,7 @@
     background-color: #307AD9 !important;
     color: white !important;
 }
-.vigilanciayproteccion {
+... {
     background-color: #FFA925 !important;
     color: white !important;
 }
