Varios arreglos (Nombres Controllers + Referencias VYP) - Se modifican los nombres de controllers y grupos para adaptaralo a modo Template - Se eliminan algunas referencias a VYP (Primer proyecto)

--- a/PLANTILLA/PLANTILLA/Views/Home/Index.cshtml
+++ b/PLANTILLA/PLANTILLA/Views/Home/Index.cshtml
@@ -2,11 +2,11 @@
     <div class="meta">
         <div class="photo" style="background-image: url('../../assets/images/backgrounds/b1.jpg')"></div>
         <ul class="details">
-            <li class="author"><a href="#">Vigilancia y Proteccion</a></li>
+            <li class="author"><a href="#">PROJECT</a></li>
             <li class="tags">
                 <ul>
-                    <li><a>#vigilante</a></li>
-                    <li><a>#seguridad</a></li>
+                    <li><a>#tag1</a></li>
+                    <li><a>#tag2</a></li>
                 </ul>
             </li>
         </ul>
