--- a/PLANTILLA/PLANTILLA/Views/Home/PanelDatos.cshtml
+++ b/PLANTILLA/PLANTILLA/Views/Home/PanelDatos.cshtml
@@ -68,7 +68,7 @@
             <div class="meta">
                 <div class="photo" style="background-image: url(@otrasNoticias[i].Img)"></div>
                 <ul class="details">
-                    <li class="author"><a href="#">Vigilancia y Proteccion</a></li>
+                    <li class="author"><a href="#">Project</a></li>
                     <li class="tags">
                         <ul>
                             <li><a>#Noticia</a></li>
