--- a/PLANTILLA/PLANTILLA/Views/Shared/_Layout.cshtml
+++ b/PLANTILLA/PLANTILLA/Views/Shared/_Layout.cshtml
@@ -3,10 +3,10 @@
 <html lang="es" prefix="og: http://ogp.me/ns#">
 <head>
     @if (ViewData["Title"]!=null){
-        <title>Portal Vigilancia y Proteccion (Ofertas, trabajo,  empleo, noticias, cursos) - @(ViewBag.MetaTitle)</title>
+        <title>Project (Ofertas, trabajo,  empleo, noticias, cursos) - @(ViewBag.MetaTitle)</title>
     }
     else{
-        <title>Portal Vigilancia y Proteccion (Ofertas, trabajo,  empleo, noticias, cursos) - @(ViewData["Title"])</title>
+        <title>Project (Ofertas, trabajo,  empleo, noticias, cursos) - @(ViewData["Title"])</title>
     }
     <link rel="icon" href="/assets/images/logo2.ico">
     @{
@@ -23,22 +23,22 @@
     <!-- Twitter -->
     <meta name="twitter:card" property="twitter:card" content="summary_large_image">
     <meta name="twitter:url" property="twitter:url" content="@ViewBag.Url">
-    <meta name="twitter:title" property="twitter:title" content="@(ViewBag.MetaTitle) - Portal Vigilancia y Protecion">
-    <meta name="twitter:description" property="twitter:description" content="@(ViewBag.MetaDescription) - Portal Vigilancia y Proteccion (Ofertas, trabajo,  empleo, noticias, cursos)">
+    <meta name="twitter:title" property="twitter:title" content="@(ViewBag.MetaTitle) - Project">
+    <meta name="twitter:description" property="twitter:description" content="@(ViewBag.MetaDescription) - Project (Ofertas, trabajo,  empleo, noticias, cursos)">
     <meta name="twitter:image" property="twitter:image" content="@(ViewBag.MetaImg)">
 
     <!--   -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="raulkarba">
     <meta name="description" content="@(ViewBag.MetaDescription)
-        - Portal Vigilancia y Proteccion (Ofertas, trabajo,  empleo, noticias, cursos)"
+        - Project (Ofertas, trabajo,  empleo, noticias, cursos)"
 
 
     <!-- Open Graph / Facebook -->
     <meta name="og:type" property="og:type" content="website">
     <meta name="og:url" property="og:url" content="@ViewBag.Url">
-    <meta name="og:title" property="og:title" content="@(ViewBag.MetaTitle) - Portal Vigilancia y Protecion">
-    <meta name="og:description" property="og:description" content="@(ViewBag.MetaDescription) - Portal Vigilancia y Proteccion (Ofertas, trabajo,  empleo, noticias, cursos)">
+    <meta name="og:title" property="og:title" content="@(ViewBag.MetaTitle) - Project">
+    <meta name="og:description" property="og:description" content="@(ViewBag.MetaDescription) - Project (Ofertas, trabajo,  empleo, noticias, cursos)">
     <meta name="og:image" property="og:image" content="@(ViewBag.MetaImg)">
     <meta name="og:image:url" property="og:image:url" content="@(ViewBag.MetaImg)">
     <meta name="og:image:secure_url" property="og:image:secure_url" content="@(ViewBag.MetaImg)">
@@ -46,8 +46,8 @@
     <meta name="og:image:heigh" property="og:image:heigh" content="200">
 
     <!-- Primary Meta Tags -->
-    <meta name="title" property="title" content="@(ViewBag.MetaTitle) - Portal Vigilancia y Protecion">
-    <meta name="description" property="description" content="@(ViewBag.MetaDescription) - Portal Vigilancia y Proteccion (Ofertas, trabajo,  empleo, noticias, cursos)">
+    <meta name="title" property="title" content="@(ViewBag.MetaTitle) - Project">
+    <meta name="description" property="description" content="@(ViewBag.MetaDescription) - Project (Ofertas, trabajo,  empleo, noticias, cursos)">
     <meta name="image" propery="image" content="@(ViewBag.MetaImg)">
 
 
