--- a/PLANTILLA/PLANTILLA/Views/Home/Noticias.cshtml
+++ b/PLANTILLA/PLANTILLA/Views/Home/Noticias.cshtml
@@ -39,7 +39,7 @@
                 <div class="meta">
                     <div class="photo" style="background-image: url(@noticias3[i].Img)"></div>
                     <ul class="details">
-                        <li class="author"><a href="#">Vigilancia y Proteccion</a></li>
+                        <li class="author"><a href="#">Project</a></li>
                         <li class="tags">
                             <ul>
                                 <li><a>#Noticia</a></li>
@@ -113,7 +113,7 @@
                             <div class="meta">
                                 <div class="photo" style="background-image: url(@noticias2[i].Img)"></div>
                                 <ul class="details">
-                                    <li class="author"><a href="#">Vigilancia y Proteccion</a></li>
+                                    <li class="author"><a href="#">Project</a></li>
                                     <li class="tags">
                                         <ul>
                                             <li><a>#Noticia</a></li>
